# dfacto

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  babel.cfg  file_version_info.txt  main.py  mkdocs.yml  pyproject.toml  schema.xlsx
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: pipeline.yml
docs/: credits.md  explanation.md  how-to-guides.md  index.md  license.md  reference.md  tutorials.md
installer/: DfactoInstaller.nsi
locales/fr_FR/LC_MESSAGES/: dfacto.po
resources/invoice_template/: invoice.html  invoice_no_vat.html  style.css
src/dfacto/: __about__.py  __init__.py  __main__.py  init_db.py  settings.py
src/dfacto/backend/: __init__.py  naming.py  util.py
src/dfacto/backend/api/: __init__.py  command.py
src/dfacto/backend/api/api_v1/: base.py  client.py  company.py  service.py  vat_rate.py
src/dfacto/backend/crud/: __init__.py  base.py  client.py  company.py  invoice.py  item.py  service.py  vat_rate.py
src/dfacto/backend/db/: __init__.py  base.py  base_model.py  init_db.py  session.py
src/dfacto/backend/models/: __init__.py  base_model.py  basket.py  client.py  company.py  invoice.py  item.py  service.py  vat_rate.py
src/dfacto/backend/schemas/: __init__.py  base.py  basket.py  client.py  company.py  invoice.py  item.py  service.py  vat_rate.py
src/dfacto/backend/templates/: invoice.html
src/dfacto/frontend/: Invoice_web_view.py  __init__.py  basketviewer.py  clienteditor.py  clientselector.py  companydialogs.py  globals_editor.py  guimain.py  invoice_log_view.py  invoice_web_view.py  invoiceviewer.py  serviceeditor.py  serviceselector.py  settingsview.py
src/dfacto/models/: base.py  basket.py  client.py  command.py  crud.py  db.py  invoice.py  item.py  model.py  schema.py  service.py  util.py  vat_rate.py
src/dfacto/models/api/: __init__.py  command.py
src/dfacto/models/api/api_v1/: base.py  client.py  invoice.py  service.py  vat_rate.py
src/dfacto/models/crud/: __init__.py  base.py  client.py  invoice.py  item.py  service.py  vat_rate.py
src/dfacto/models/db/: __init__.py  base.py  base_model.py  init_db.py  session.py
src/dfacto/models/models/: __init__.py  basket.py  client.py  invoice.py  item.py  service.py  vat_rate.py
src/dfacto/models/schemas/: __init__.py  base.py  basket.py  client.py  invoice.py  item.py  service.py  vat_rate.py
src/dfacto/util/: basicpatterns.py  logutil.py  settings.py
src/dfacto/util/qtutil/: __init__.py  autocompletetextedit.py  backgroundprogressbar.py  collapsiblewidget.py  fittedlineedit.py  framewidget.py  panelview.py  pathselector.py  splash.py  statusbar.py
tests/: conftest.py  test_dfacto.py  test_service.py  test_vat_rate.py
tests/api/: test_client.py  test_invoice.py  test_service.py  test_vat_rate.py
tests/crud/: test_client.py  test_invoice.py  test_service.py  test_vat_rate.py
tests/frontend/: __init__.py  test_globals_editor.py  test_settings_editor.py
