[tool]
[tool.poetry]
name = "dfacto"
version = "1.2.0"
description = "Dfacto: manage your invoices."
authors = ["Eric Lemoine <erik.lemoine@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/Elmeric/dfacto"
repository = "https://github.com/Elmeric/dfacto"
documentation = "https://Elmeric.github.io/dfacto"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries",
]
packages = [{include = "dfacto", from = "src"}]


[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.0"
jinja2 = "^3.1.2"
babel = "^2.12.1"
pyqt6 = "^6.5.0"
pyqt6-webengine = "^6.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
invoke = "^2.0.0"
pytest-qt = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pylint = { version = "^2.15.5", python = ">=3.7.2,<4.0" }
mypy = "^1.0"
pre-commit = {version = "^3.0.0", python = ">=3.8.0,<4.0" }
invoke = "^2.0.0"
black = {version = "^23.1.0", extras = ["colorama"]}
isort = {version = "^5.12.0", python = ">=3.8.0,<4.0", extras = ["colors"]}
pyinstaller = {version = "^5.12.0", python = ">=3.9,<3.13"}


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {version = "^0.22.0", extras = ["python"]}
mkdocs-material = {version = "^9.1", extras = ["python"]}
pymdown-extensions = "^10.1"
markdown-callouts = "^0.3.0"
invoke = "^2.0.0"


[tool.black]
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "--cov-report=term-missing",
    "--cov-branch",
]
testpaths = [
    "tests",
]
markers = [
    "crud: marks CRUD integration tests using an in-memory database (deselect with '-m \"not crud\"')",
    "api",
    "frontend",
]
qt_qapp_name = "Dfacto-tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
